--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "joof",
-  "bin": "bin/joof",
+  "bin": "cli.js",
+  "version": "0.0.1",
   "scripts": {
     "pkg": "pkg .",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node cli.js serve",
+    "dev": "nodemon --exec 'npm start'"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
     "pkg": "^4.1.1"
   },
   "dependencies": {
+    "execa": "^0.7.0",
+    "listr": "^0.12.0",
+    "meow": "^3.7.0",
     "user-home": "^2.0.0"
   },
   "pkg": {
