--- a/ext/joof.safariextension/Info.plist
+++ b/ext/joof.safariextension/Info.plist
@@ -34,7 +34,7 @@
 	<key>Description</key>
 	<string>Add customer scripts and styles to any webpage</string>
 	<key>DeveloperIdentifier</key>
-	<string>0000000000</string>
+	<string>DDB8SQMXS9</string>
 	<key>ExtensionInfoDictionaryVersion</key>
 	<string>1.0</string>
 	<key>Permissions</key>
