--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "execa": "^0.7.0",
     "listr": "^0.12.0",
     "meow": "^3.7.0",
+    "sudo-prompt": "^7.1.0",
     "user-home": "^2.0.0"
   },
   "pkg": {
