--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "bin": "cli.js",
   "scripts": {
     "start": "node cli.js serve",
-    "dev": "nodemon --exec 'npm start'"
+    "dev": "nodemon --exec 'npm start'",
+    "setup": "node cli.js setup"
   },
   "keywords": [
     "js",
