Add Chrome extension

--- a/ext/joof.safariextension/Info.plist
+++ b/ext/joof.safariextension/Info.plist
@@ -32,7 +32,7 @@
 		</array>
 	</dict>
 	<key>Description</key>
-	<string>Add customer scripts and styles to any webpage</string>
+	<string>Add custom scripts and styles to any webpage</string>
 	<key>DeveloperIdentifier</key>
 	<string>DDB8SQMXS9</string>
 	<key>ExtensionInfoDictionaryVersion</key>
